@@ -5,6 +5,49 @@
     <link rel="stylesheet" type = "text/css" href="CSS/cssMain.css">
     <body class = "flexBody">
         <article class = "flexArticle">
+            <table>
+                <tr>
+                    <th></th>
+                    <th>Position(km)</th>
+                    <th>Velocity(m/s)</th>
+                </tr>
+                <tr>
+                    <td>X</td>
+                    <td id="USLAB000032"></td>
+                    <td id="USLAB000035"></td>
+                </tr>
+                <tr>
+                    <td>Y</td>
+                    <td id="USLAB000033"></td>
+                    <td id="USLAB000036"></td>
+                </tr>
+                <tr>
+                    <td>Z</td>
+                    <td id="USLAB000034"></td>
+                    <td id="USLAB000037"></td>
+                </tr>
+            </table>
+            
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.9/require.min.js"></script>
+            <script language="JavaScript" src ="https://unpkg.com/lightstreamer-client-web/lightstreamer.min.js"></script>
+            <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+            
+            <script>
+            require(["LightstreamerClient","Subscription"],function(LightstreamerClient,Subscription) {
+                var client = new LightstreamerClient("https://push.lightstreamer.com","ISSLIVE");
+                client.connect();
+                
+                var sub = new Subscription("MERGE",["USLAB000032","USLAB000035","USLAB000033","USLAB000036","USLAB000034","USLAB000037"],["Value"]);
+                client.subscribe(sub);
+                
+                sub.addListener({
+                    onItemUpdate: function(update) {
+                        $("#"+update.getItemName()).text(update.getValue("Value"));
+                    }
+                });
+                
+            });
+            </script>
         </article>
     </body>
 </html>
